# TaskSwift-backend

./: pyproject.toml
taskswift_django/apps/accounts/: admin.py  models.py
taskswift_django/apps/accounts/migrations/: 0001_initial.py
taskswift_django/apps/accounts/templates/accounts/: base.html
taskswift_django/apps/api/: permissions.py  urls.py
taskswift_django/apps/api/tasks/: permissions.py  routers.py  serializers.py  tasks_urls.py  throttling.py  urls.py  views.py
taskswift_django/apps/api/tasks/urls/: categories_urls.py  tasks_urls.py
taskswift_django/apps/api/users/: serializers.py  urls.py  views.py
taskswift_django/apps/tasks/: models.py  serializers.py  urls.py
taskswift_django/apps/users/: admin.py  models.py  urls.py  views.py
taskswift_django/apps/users/migrations/: 0001_initial.py
taskswift_django/backend/: settings.py  urls.py
taskswift_django/config/: urls.py
taskswift_django/config/settings/: base.py  local.py  settings.py
