[tool.poetry]
name = "web-taskswift-django"
version = "0.1.0"
description = ""
authors = ["Roman <anovelforstudy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
icecream = "^2.1.3"
django = "^5.0.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.1"
django-jet-reboot = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-third-party = ["icecream"]
known-first-party = ["src"]
